mosquitto/_mosquitto.svc.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: mosquitto-nodeport
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  type: NodePort
  ports:
    - name: mosquitto-web
      port: 9001
      targetPort: 9001
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: mqtt-alt
      port: 8883
      targetPort: 1883
  externalIPs:
    - 192.168.1.150
