mosquitto/mosquitto.ingress.traefik.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: mosquitto
  labels:
    app: mosquitto
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: mosquitto.will.lan
      http:
        paths:
          - backend:
              serviceName: mosquitto
              servicePort: 80
    - host: mqtt.will.lan
      http:
        paths:
          - backend:
              serviceName: mosquitto
              servicePort: 1883
